Fixed issue where on first browse playing tracks would not show. Fixed bug where badges on queued tracks were too large

--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -194,7 +194,7 @@ uib-accordion .panel-group{
     height: 100%;
 }
 
-span.badge{
+uib-tab-heading>span.badge{
     position: absolute;
     right:-3px;
     top:-3px;
@@ -210,15 +210,15 @@ li.uib-tab>a{
 #searchclear{
     position: absolute;
     /* top: 0; */
-    right: 45px;
+    right: 50px;
     z-index: 12;
-    display: block;
     /* width: 50px; */
-    height: 100%;
     line-height: 34px;
     text-align: center;
-    pointer-events: none;
     vertical-align: middle;
-    padding-top: 5px;
+}
+
+:focus {
+    outline: none;
 }
 
